--- a/charts/app/values.yaml
+++ b/charts/app/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  repository: nginx
-  tag: 1.0.0
+  repository: ghcr.io/lostfoil/better-e-frontend
+  tag: latest
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -18,14 +18,14 @@ port: 3000
 
 imageCredentials:
   enabled: false
-  registry: quay.io
-  username: user
+  registry: ghcr.io
+  username: prmsrswt
   password: <secret>
-  email: user@lostfoil.com
+  email: prmsrswt@gmail.com
 
 serviceAccount:
   # Specifies whether a service account should be created
-  create: true
+  create: false
   # Annotations to add to the service account
   annotations: {}
   # The name of the service account to use.
