Add option to start postgres cluster

--- a/charts/app/values.yaml
+++ b/charts/app/values.yaml
@@ -72,6 +72,16 @@ ingressRoute:
       #     - a.example.net
       #     - b.example.net
 
+postgres:
+  create: false
+  teamId: lf
+  volumeSize: 1Gi
+  numberOfInstances: 1
+  version: "12"
+  # Name of the db to create inside the server.
+  dbName: "lfdb"
+  user: "dbuser"
+
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
